packages/ui-library/src/css/tutorial.scss
.tutorial {
    &__bg {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-color: rgba(0, 0, 0, 0.5);
    }

    &__modal {
        background-color: $color-white;
        border-radius: 4px;
        z-index: 100;
        width: 300px;
        max-width: 400px;
        position: absolute;
        background: $color-white;
        box-shadow: $popup-box-shadow;

        &--close {
            position: absolute;
            top: $spacing-lg;
            right: $spacing-lg;
        }

        &--content {
            padding: $spacing-lg $spacing-md $spacing-md $spacing-md;
        }

        &--header {
            margin-bottom: $spacing-md;
        }

        &--title {
            font-size: 20px;
            font-weight: 700;
            color: $color-neutral-20;
            margin-bottom: $spacing-md;
        }

        &--description {
            font-size: 14px;
            font-weight: 500;
            color: $color-neutral-10;
        }

        &--footer {
            margin-top: $spacing-md;
            padding: $spacing-md $spacing-lg;
            border-top: 1px solid $color-neutral-90;
        }

        &--progress {
            ul.tutorial__modal--steps {
                padding: 0;
                margin: 0;
                list-style: none;

                li.tutorial__modal--step {
                    display: inline-block;
                    margin-right: $spacing-xs;
                    margin-left: -2px;
                    border: 1px solid transparent;
                    padding: 2px;

                    &:before {
                        content: "";
                        height: 8px;
                        width: 8px;
                        border-radius: 50%;
                        background: $color-active-blue;
                        display: block;
                    }

                    &--complete {
                        &:before {
                            background: $color-active-blue;
                        }
                    }

                    &--active {
                        border: 1px solid $color-active-blue;
                        padding: 2px;
                        border-radius: 50%;

                        &:before {
                            background: $color-active-blue;
                        }
                    }

                    &--inactive {
                        &:before {
                            background: $color-neutral-90;
                        }
                    }
                }
            }
        }

        // Arrow -- bottom
        &:before {
            width: 20px;
            height: 20px;
            transform: rotate(45deg);
            content: " ";
            display: inline-block;
            background: $color-white;
            position: absolute;
            top: -10px;
            left: 20px;
            display: inline-block;
            box-shadow: $popup-box-shadow;
            z-index: 90;
        }
    }
}

